--- a/espaciodoc/templates/Measurement/documents.html
+++ b/espaciodoc/templates/Measurement/documents.html
@@ -4,7 +4,7 @@
 <div class="content">
     <div class="">
         <div class="page-header-title">
-            <h4 class="page-title">Last Ten Measures</h4>
+            <h4 class="page-title">Ultimos documentos subidos</h4>
             <div style="text-align:right;">
                 <button type="button" class="btn btn-success waves-effect waves-light"
                         onClick=" window.location.href='/measurementcreate' " style="text-align:center;">+
@@ -24,22 +24,17 @@
                     <table class="table table-hover">
                         <thead>
                         <tr style="color:#0E2EB0">
-                            <th font color="red">Variable</th>
-                            <th>Value</th>
-                            <th>Unit</th>
-                            <th>Place</th>
-                            <th>Date Time</th>
+                            <th font color="red">doc</th>
+                            <th>title</th>
+                            <th>file</th>
                         </tr>
                         </thead>
                         <tbody>
 
-                        {% for measurement in measurement_list %}
+                        {% for document in document_list %}
                         <tr>
-                            <td>{{ measurement.variable.name }}</td>
-                            <td>{{ measurement.value }}</td>
-                            <td>{{ measurement.unit }}</td>
-                            <td>{{ measurement.place }}</td>
-                            <td>{{ measurement.dateTime }}</td>
+                            <td>{{ document.title }}</td>
+                            <td>{{ document.file }}</td>
                         </tr>
                         {% endfor %}
 
