--- a/asrdisponibilidad/templates/base.html
+++ b/asrdisponibilidad/templates/base.html
@@ -18,7 +18,7 @@
                 </a>
             </nav>
 
-          <nav class="navbar navbar-light bg-light">
+          <nav class="navbar navbar-light bg-light">s
               <a class="navbar-brand" href="/">
                   Monitoring App
               </a>
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="/variables/">Variables</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/measurements/">Measurements</a>
+                    <a class="nav-link" href="/documents/">documentos hp</a>
                 </li>
             </ul>
 
@@ -48,18 +48,5 @@
 
     </body>
 
-    <!-- Footer -->
-        <footer style="background-color: #D8D8D8; position: relative; bottom: 0; width: 100%; height: 100px;">
-
-            <div style="padding: 30px">
-                <div style="float: left; width: 400px;" >ISIS-2503 Arquitectura y Diseño de Software</div>
-                <div style="float: right; width: 220px;" >Universidad de los Andes</div>
-                <br>
-                <div style="float: left; width: 400px;" ><i>Iván David Alfonso Díaz</i></div>
-            </div>
-            <br>
-
-        </footer>
-    <!-- Footer -->
 
 </html>
