--- a/asrdisponibilidad/templates/base.html
+++ b/asrdisponibilidad/templates/base.html
@@ -14,13 +14,13 @@
 
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="/">
-                <img src="/static/media/logo.png" width="45" height="45" alt="">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.es%2Ficono-gratis%2Fdisponibilidad_4088125&psig=AOvVaw0869ZQzb06AnS9Zk0-CZkJ&ust=1714883816340000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLCO7ZeW84UDFQAAAAAdAAAAABAE" width="45" height="45" alt="">
                 </a>
             </nav>
 
           <nav class="navbar navbar-light bg-light">s
               <a class="navbar-brand" href="/">
-                  Monitoring App
+                  ASR DISPONIBILIDAD
               </a>
           </nav>
 
@@ -28,10 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/documentUpload/"> upload </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/documents/">documentos hp</a>
+                    <a class="nav-link" href="/documents/">documentos cachones muejeje</a>
                 </li>
             </ul>
 
