--- a/espaciodoc/templates/Measurement/documents.html
+++ b/espaciodoc/templates/Measurement/documents.html
@@ -7,7 +7,7 @@
             <h4 class="page-title">Ultimos documentos subidos</h4>
             <div style="text-align:right;">
                 <button type="button" class="btn btn-success waves-effect waves-light"
-                        onClick=" window.location.href='/measurementcreate' " style="text-align:center;">+
+                        onClick=" window.location.href='/documentUpload' " style="text-align:center;">+
                 </button>
             </div>
         </div>
