--- a/asrdisponibilidad/templates/base.html
+++ b/asrdisponibilidad/templates/base.html
@@ -14,7 +14,7 @@
 
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="/">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.es%2Ficono-gratis%2Fdisponibilidad_4088125&psig=AOvVaw0869ZQzb06AnS9Zk0-CZkJ&ust=1714883816340000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCLCO7ZeW84UDFQAAAAAdAAAAABAE" width="45" height="45" alt="">
+                <img src="/static/media/image.png" width="45" height="45" alt="">
                 </a>
             </nav>
 
