--- a/espaciodoc/templates/Measurement/documentUpload.html
+++ b/espaciodoc/templates/Measurement/documentUpload.html
@@ -1,12 +1,22 @@
-{% extends 'base.html' %} 
-{% block content %} 
-<form method="POST"> 
+{% extends 'base.html' %}
+
+{% block content %}
+<form method="POST" enctype="multipart/form-data"> 
     {% csrf_token %}
     <br>
-    {{ form.as_p }} 
+    <!-- Display title field and any errors associated with it -->
+    {{ form.title }}
+    {{ form.title.errors }}
+    <br>
+
+    <!-- Display file field and any errors associated with it -->
+    {{ form.file }}
+    {{ form.file.errors }}
+    <br>
+
     <button type="submit" class="btn btn-success waves-effect waves-light">Create</button>
     <button type="button" class="btn btn-primary waves-effect waves-light"
-                                onClick=" window.location.href='/documents' ">Back
+            onClick=" window.location.href='/documents' ">Back
     </button>
 </form> 
 {% endblock %}
