--- a/asrdisponibilidad/templates/base.html
+++ b/asrdisponibilidad/templates/base.html
@@ -18,9 +18,9 @@
                 </a>
             </nav>
 
-          <nav class="navbar navbar-light bg-light">s
+          <nav class="navbar navbar-light bg-light">
               <a class="navbar-brand" href="/">
-                  ASR DISPONIBILIDAD
+                  Asr Disponibilidad
               </a>
           </nav>
 
